--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,4 +1,75 @@
-.overlay {
+.modal {
+    position: absolute;
+    z-index: 100;
+    left: 50%;
+    top: 50%;
+    background-color: #fff;
+    width: 280px;
+    height: auto;
+
+    padding-top: 0;
+    margin-top: 50px;
+}
+@media screen and (max-width: 767px) {
+    .modal {
+        position: absolute;
+        background-color: #fff;
+        top: 50%;
+        top: 360px;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+        width: 100%;
+    }
+    .wrapper {
+        width: 280px;
+        margin: 0 auto;
+    }
+
+    .iconArrowBack {
+        display: block;
+        background-color: #eff1f3;
+        padding: 8px 0 8px 25px;
+        margin-bottom: 40px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        width: 672px;
+        height: 572px;
+        margin-top: 0;
+        border-radius: 25px;
+        background-image: url('../../images/mainPage/GreenLaptop.png');
+        background-position: bottom right;
+        background-repeat: no-repeat;
+        padding: 40px 20px;
+    }
+    .overlay {
+        z-index: 1000;
+        position: relative;
+        position: fixed;
+        top: 0;
+        left: 0;
+        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    body .modal {
+        transform: translate(-50%, -50%);
+    }
+}
+
+.btnCloseModal {
+    cursor: pointer;
+}
+
+/* ///OLD */
+
+/* .overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -33,4 +104,4 @@
     to {
         transform: scale(1);
     }
-}
+} */
