--- a/src/pages/PageNotFound/PageNotFound.module.css
+++ b/src/pages/PageNotFound/PageNotFound.module.css
@@ -1,11 +1,9 @@
 .container {
     padding: 20px 30px;
-    background-color: transparent;
 }
 
 .background {
-    margin-top: 80px;
-    padding: 30px 20px;
+    padding: 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,14 +18,26 @@
     margin-bottom: 10px;
 }
 
+.img {
+    width: 160px;
+    height: 180px;
+    margin-bottom: 10px;
+    background-image: url('https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
 .text {
     margin-bottom: 15px;
-    color: var(--main-color);
+    font-size: 18px;
+    line-height: 1.36;
+    color: #000000;
 }
 
 @media screen and (min-width: 768px) {
     .container {
-        padding: 20px 120px;
+        padding: 0 120px;
     }
     .background {
         box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
@@ -35,11 +45,15 @@
     .title {
         font-size: 22px;
     }
+    .img {
+        width: 360px;
+        height: 260px;
+    }
 }
 
 @media screen and (min-width: 1280px) {
     .container {
-        padding: 20px 320px;
+        padding: 0 320px;
     }
     .background {
         padding: 30px 20px;
