--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     /* --accent-color: #ff751d;
     --avatar-bg-color: #f5f6fa;
     --main-color: #52555f;
-    --separate-line-color: #e0e5eb;
+    --separate-line-color: #E0E0E0;
     --input-bg-color: #f6f7fb;
     --bg-color: #ffffff;
     --bg-secondary-color: #f2f5fc;
