--- a/src/components/ModalTeam/ModalTeam.module.css
+++ b/src/components/ModalTeam/ModalTeam.module.css
@@ -412,7 +412,7 @@
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
 }
-/* @-webkit-keyframes rotate-90-cw {
+@-webkit-keyframes rotate-90-cw {
   0% {
     -webkit-transform: rotate(0);
     transform: rotate(0);
@@ -431,4 +431,4 @@
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
   }
-} */
+}
