--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,7 +3,7 @@
 /* =======   ======== */
 
 .container {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
