--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,22 +1,26 @@
 .container {
     position: relative;
+    width: 220px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 15px;
+    gap: 20px;
+    /* margin-bottom: 15px; */
 }
 
 .icon {
     position: absolute;
-    left: 0px;
+    right: 0px;
+    cursor: pointer;
 }
 
 .datePicker {
-    width: 90px;
-    margin: 0;
-    padding-left: 25px;
+    width: 220px;
+    /* margin: 0; */
+    /* padding-left: 25px; */
     font-weight: 700;
-    line-height: 1.67;
+    font-size: 34px;
+    line-height: 1.2;
     color: inherit;
     border: none;
     background-color: transparent;
@@ -25,20 +29,20 @@
 
 @media screen and (min-width: 768px) {
     .container {
-        width: 104px;
-        margin-top: 0;
-        margin-bottom: 0;
+        /* width: 260px; */
+        /* margin-top: 0;
+        margin-bottom: 0; */
     }
 
     .datePicker {
-        font-weight: 900;
-        text-transform: uppercase;
+        /* font-weight: 900;
+        text-transform: uppercase; */
     }
 }
 
 @media screen and (min-width: 1280px) {
     .container {
-        margin-right: 0px;
-        margin-left: 0;
+        /* margin-right: 0px;
+        margin-left: 0; */
     }
 }
