--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import 'modern-normalize/modern-normalize.css';
-/* @import url('https://fonts.googleapis.com/css2?family=Veranda:wght@400;500;700;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 :root {
     /* --accent-color: #ff751d;
@@ -26,7 +26,7 @@
 
 body {
     margin: 0;
-    font-family: 'Veranda', sans-serif;
+    font-family: 'Roboto', sans-serif;
     /* font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em; */
