--- a/src/pages/Diary/Diary.module.css
+++ b/src/pages/Diary/Diary.module.css
@@ -1,6 +1,14 @@
-.date{
-font-size: 34px;
-line-height: 1.2;
-
-color: #212121
+.container {
+    display: flex;
 }
+
+.diary {
+    width: 763px;
+}
+
+/* .date {
+    font-size: 34px;
+    line-height: 1.2;
+
+    color: #212121;
+} */
