--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    /* font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em; */
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
 }
 
 img {
@@ -38,7 +38,8 @@ img {
     display: block;
 }
 
-p {
+p,
+h2 {
     padding: 0;
     margin: 0;
 }
@@ -64,8 +65,13 @@ input:focus {
     outline: none;
 }
 
-.container {
-    min-height: 100vh;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+input[type='number'] {
+    -moz-appearance: textfield;
 }
 
 /* .main {
