--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,10 +3,13 @@
 /* =======   ======== */
 
 .container {
-    /* min-height: 100vh; */
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding-top: 140px;
+}
+
+.side {
+    width: 763px;
+    flex-shrink: 0;
 }
 
 @media screen and (min-width: 768px) {
