--- a/src/components/CalculatorForm/CalculatorForm.module.css
+++ b/src/components/CalculatorForm/CalculatorForm.module.css
@@ -55,6 +55,12 @@
     transition: all 250ms linear;
 }
 
+.btnCenter {
+    composes: btn;
+    margin-left: 0;
+    margin-top: 40px;
+}
+
 .btn:hover {
     transform: scale(1.05);
     transition: all 250ms linear;
@@ -69,4 +75,72 @@
     margin: -14px 0 0;
     font-size: 10px;
     color: #ff0000;
+}
+
+.modalContainer {
+    width: 330px;
+    text-align: center;
+}
+
+.modalTitle {
+    font-weight: 700;
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+.rate {
+    font-weight: 700;
+    font-size: 22px;
+    color: #264061;
+    margin-bottom: 32px;
+}
+
+.value {
+    font-size: 48px;
+}
+
+.line {
+    height: 0;
+    margin: 0 auto;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.text {
+    font-weight: 700;
+    margin-top: 12px;
+    text-align: left;
+}
+
+.radio {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    width: 20px;
+    height: 20px;
+    border-radius: 50px;
+    border: 1px solid #e0e0e0;
+    cursor: pointer;
+}
+
+.radio:checked {
+    border: 1px solid #fc842d;
+    background-image: radial-gradient(
+        circle at center,
+        #fc842d 6px,
+        #ffffff 6px
+    );
+}
+
+.label {
+    display: flex;
+    align-items: center;
+    color: #9b9faa;
+    cursor: pointer;
+}
+
+.checked {
+    composes: label;
+    font-weight: 700;
+    color: #fc842d;
 }
