--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,3 +1,16 @@
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(33, 33, 33, 0.12);
+    z-index: 1200;
+}
+
 .modal {
     position: absolute;
     z-index: 100;
@@ -10,6 +23,20 @@
     padding-top: 0;
     margin-top: 50px;
 }
+
+.icon {
+    position: absolute;
+    top: 23px;
+    right: 23px;
+    cursor: pointer;
+    stroke: var(--main-color);
+    z-index: 1300;
+}
+
+.icon:hover {
+    stroke: #ff751d;
+}
+
 @media screen and (max-width: 767px) {
     .modal {
         position: absolute;
@@ -40,11 +67,47 @@
         height: 572px;
         margin-top: 0;
         border-radius: 25px;
-        background-image: url('../../images/GreenLaptop.png');
+        /* background-image: url('../../images/GreenLaptop.png');
         background-position: bottom right;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat; */
         padding: 40px 20px;
     }
+    .overlay {
+        z-index: 1000;
+        position: relative;
+        position: fixed;
+        top: 0;
+        left: 0;
+        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    body .modal {
+        transform: translate(-50%, -50%);
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .modal {
+        width: 672px;
+        height: 573px;
+        margin-top: 0;
+        border-radius: 25px;
+        /* background-image: url('../../images/GreenLaptop.png');
+        background-position: bottom right;
+        background-repeat: no-repeat; */
+        padding: 40px 20px;
+    }
+
+    .wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     .overlay {
         z-index: 1000;
         position: relative;
