--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -1,7 +1,7 @@
 .list {
     width: 630px;
     max-height: 280px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .product {
@@ -25,6 +25,7 @@
     width: 107px;
     margin-right: 32px;
     padding: 20px 0;
+    text-align: right;
     border-bottom: 1px solid #e0e0e0;
 }
 
