--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,43 +1,19 @@
 .container {
     position: relative;
-    width: 500px;
+    width: 600px;
 }
-
-/* .btn {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 44px;
-    padding: 0 20px;
-    text-align: start;
-    border: 2px solid #aaaaaa;
-    border-radius: 0 0 22px 0;
-    border-top: none;
-    background-color: transparent;
-
-    cursor: pointer;
-} */
-
-/* .icon {
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateX(-50%);
-    pointer-events: none;
-} */
 
 .list {
     position: absolute;
-    /* width: 90%; */
     left: 0;
-    top: 0px;
+    top: -40px;
     max-height: 280px;
     margin: 0;
     padding: 0;
     list-style: none;
-    background: #aaaaaa;
-    border: 2px solid #cacaca;
-    box-shadow: 1px 3px 5px #aab2c533;
+    background: #ffffff;
+    /* border: 1px solid #cacaca; */
+    box-shadow: 0 0 3px #aab2c533;
     overflow-y: scroll;
     z-index: 20;
 }
@@ -53,7 +29,7 @@
 }
 
 .item:hover {
-    color: black;
+    color: #ffffff;
     background-color: #123456;
 }
 
