--- a/src/components/Summary/Summary.module.css
+++ b/src/components/Summary/Summary.module.css
@@ -10,6 +10,7 @@
 }
 
 .summary {
+    width: 270px;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -18,6 +19,34 @@
     color: #9b9faa;
 }
 
-.text {
-    color: #9b9faa;
+.item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.note {
+    margin: 0 40px 40px -30px;
+    font-weight: 700;
+    font-size: 16px;
+    text-align: center;
+}
+
+.link {
+    padding: 13px 30px;
+    font-weight: 700;
+    margin-left: 80px;
+    border: none;
+    border-radius: 30px;
+    background-color: #fc842d;
+    box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
+    color: #ffffff;
+    cursor: pointer;
+
+    transition: all 250ms linear;
+}
+
+.link:hover {
+    transform: scale(1.05);
+    background-color: #9b9faa;
+    color: #000000;
 }
