--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 :root {
+    --main-color: #212121;
     /* --accent-color: #ff751d;
     --avatar-bg-color: #f5f6fa;
-    --main-color: #52555f;
     --separate-line-color: #E0E0E0;
     --input-bg-color: #f6f7fb;
     --bg-color: #ffffff;
@@ -30,6 +30,13 @@ body {
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.04em;
+    color: var(--main-color);
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    scrollbar-width: thin;
+    scrollbar-color: #264061 #f0f1f3;
 }
 
 img {
