--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,23 +1,25 @@
 .button {
-    min-width: 176px;
+    /* min-width: 176px; */
+    width: 176px;
+    margin: 0 auto;
     border: none;
     padding: 13px;
     font-weight: 700;
-    letter-spacing: 0.04em;
     border-radius: 30px;
     cursor: pointer;
 }
 
 .primary {
-    color: #ffffff;
-    background-color: #fc842d;
-    box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
-    transition: all 250ms linear;
+    color: var(--bg-color);
+    background-color: var(--accent-color);
+    border: 2px solid var(--accent-color);
+    box-shadow: var(--box-shadow);
+    transition: var(--transition);
 }
 
 .primary:hover {
-    transform: scale(1.05);
-    transition: all 250ms linear;
+    color: var(--accent-color);
+    background-color: var(--bg-color);
 }
 
 .primary:disabled {
@@ -31,9 +33,9 @@
 }
 
 .secondary {
-    color: #fc842d;
-    background-color: #ffffff;
-    border: 2px solid #fc842d;
+    color: var(--accent-color);
+    background-color: var(--bg-color);
+    border: 2px solid var(--accent-color);
     width: 290px;
     margin: auto;
 }
