--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,26 +1,22 @@
 .container {
+    /* margin-right: 0px;
+    margin-left: 0; */
     position: relative;
-    width: 220px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    /* margin-bottom: 15px; */
+    width: 150px;
 }
 
 .icon {
     position: absolute;
-    right: 0px;
+    right: 0;
+    top: 0;
     cursor: pointer;
+    pointer-events: none;
 }
 
 .datePicker {
-    width: 220px;
-    /* margin: 0; */
-    /* padding-left: 25px; */
+    width: 150px;
     font-weight: 700;
-    font-size: 34px;
-    line-height: 1.2;
+    font-size: 18px;
     color: inherit;
     border: none;
     background-color: transparent;
@@ -29,9 +25,12 @@
 
 @media screen and (min-width: 768px) {
     .container {
-        /* width: 260px; */
-        /* margin-top: 0;
-        margin-bottom: 0; */
+        position: relative;
+        width: 140px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
     }
 
     .datePicker {
@@ -44,5 +43,10 @@
     .container {
         /* margin-right: 0px;
         margin-left: 0; */
+        width: 220px;
+    }
+
+    .datePicker {
+        font-size: 34px;
     }
 }
