--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,27 +1,22 @@
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(33, 33, 33, 0.12);
-    z-index: 1200;
-}
-
 .modal {
     position: absolute;
     z-index: 100;
-    left: 50%;
-    top: 50%;
-    background-color: #fff;
-    width: 280px;
-    height: auto;
+    left: 0;
+    top: 56px;
+    background-color: var(--bg-color);
+    width: 100%;
+    height: 100vh;
 
-    padding-top: 0;
-    margin-top: 50px;
+    margin-top: 45px;
+}
+
+.modalBottom {
+    composes: modal;
+    top: 90px;
+}
+
+.goBack {
+    cursor: pointer;
 }
 
 .icon {
@@ -33,11 +28,30 @@
     z-index: 1300;
 }
 
-.icon:hover {
-    stroke: #ff751d;
+.goBack {
+    stroke: var(--main-color);
 }
 
-@media screen and (max-width: 767px) {
+.icon:hover,
+.goBack:hover {
+    stroke: var(--accent-color);
+}
+
+.btnCloseModal {
+    cursor: pointer;
+}
+
+.muted {
+    background-color: var(--bg-secondary-color);
+}
+
+.transparent {
+    position: absolute;
+    top: -40px;
+    left: calc((100vw - 240px) / 2);
+}
+
+/* @media screen and (max-width: 767px) {
     .modal {
         position: absolute;
         background-color: #fff;
@@ -59,17 +73,14 @@
         padding: 8px 0 8px 25px;
         margin-bottom: 40px;
     }
-}
+} */
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
     .modal {
         width: 672px;
         height: 572px;
         margin-top: 0;
         border-radius: 25px;
-        /* background-image: url('../../images/GreenLaptop.png');
-        background-position: bottom right;
-        background-repeat: no-repeat; */
         padding: 40px 20px;
     }
     .overlay {
@@ -88,7 +99,7 @@
     body .modal {
         transform: translate(-50%, -50%);
     }
-}
+} */
 
 @media screen and (min-width: 1280px) {
     .modal {
@@ -109,23 +120,19 @@
     }
 
     .overlay {
-        z-index: 1000;
-        position: relative;
         position: fixed;
         top: 0;
         left: 0;
-        opacity: 1;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(33, 33, 33, 0.12);
+        z-index: 1200;
     }
-    body .modal {
+
+    /* body .modal {
         transform: translate(-50%, -50%);
-    }
-}
-
-.btnCloseModal {
-    cursor: pointer;
+    } */
 }
