--- a/src/components/ProductForm/ProductForm.module.css
+++ b/src/components/ProductForm/ProductForm.module.css
@@ -1,7 +1,9 @@
 .form {
     display: flex;
-    margin-top: 50px;
+    flex-direction: column;
+    margin-top: 40px;
     margin-bottom: 40px;
+    padding: 0 20px;
 }
 
 .button {
@@ -11,33 +13,46 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fc842d;
+    background-color: var(--accent-color);
     cursor: pointer;
 }
 
 .input {
-    border: none;
-    border-bottom: 1px solid #e0e0e0;
-
     font-weight: 700;
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: 0.04em;
+    padding-top: 32px;
+    padding-bottom: 5px;
+    border: none;
+    border-bottom: 1px solid var(--line-color);
 }
 
 .name {
     composes: input;
-    width: 240px;
+    width: 280px;
     margin-right: 48px;
-    text-align: left;
 }
 
 .gramm {
     composes: input;
-    width: 107px;
+    width: 280px;
     margin-right: 60px;
-    text-align: right;
+    margin-bottom: 40px;
+}
 
-    appearance: none;
-    -moz-appearance: textfield;
+@media screen and (min-width: 1280px) {
+    .form {
+        flex-direction: row;
+        margin-top: 50px;
+    }
+
+    .name {
+        composes: input;
+        width: 240px;
+        margin-right: 48px;
+        text-align: left;
+    }
+
+    .gramm {
+        width: 107px;
+        text-align: right;
+    }
 }
