--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 
 :root {
     --main-color: #212121;
-    /* --accent-color: #ff751d;
-    --avatar-bg-color: #f5f6fa;
+    --accent-color: #ff751d;
+    /* --avatar-bg-color: #f5f6fa;
     --separate-line-color: #E0E0E0;
     --input-bg-color: #f6f7fb;
     --bg-color: #ffffff;
