--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -43,14 +43,16 @@
     box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
     border-radius: 30px;
 }
-.formBtn:disabled {
-    background-color: hsla(25, 97%, 58%, 0.253);
-}
+
 .formBtn:hover,
 .formBtn:focus {
     color: #fc842d;
     background-color: #fff;
     border: 4px solid #fc842d;
+    transform: scale(1.1);
+}
+.formBtn:disabled {
+    background-color: hsla(25, 97%, 58%, 0.253);
 }
 
 .errorCont {
@@ -63,7 +65,33 @@
     font-size: 12px;
 }
 
+.googleBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px auto 0;
+    width: 182px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
+    filter: drop-shadow(1px 2px 3px rgba(170, 178, 197, 0.2));
+}
+
+.googleBtn:hover,
+.googleBtn:focus {
+    background-color: var(--accent-color);
+    box-shadow: 1px 3px 5px rgba(255, 107, 8, 0.35);
+    color: #ffffff;
+    transform: scale(1.1);
+    border: 4px solid #fc842d;
+}
+
 @media screen and (min-width: 768px) {
+    .googleBtn {
+        margin: 40px auto 0 0;
+    }
     .loginForm {
         margin-top: 160px;
         margin-left: 20px;
