--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,5 +1,5 @@
 .loginForm {
-    margin-top: 40px;
+    margin-top: 8px;
 }
 
 .formHeading {
@@ -8,7 +8,7 @@
     line-height: 13px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #fc842d;
+    color: var(--accent-color);
     text-align: center;
     margin-bottom: 40px;
 }
@@ -21,48 +21,25 @@
     font-size: 14px;
     line-height: 1.21;
     letter-spacing: 0.04em;
-    color: #212121;
+    color: var(--main-color);
     padding: 20px 0px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid var(--line-color);
     margin: 0 20px;
     width: calc(100% - 40px);
 }
 
 .formInput::placeholder {
-    color: #9b9faa;
-}
-.formBtn {
-    display: block;
-    margin: 60px auto 0px;
-    text-align: center;
-    border: none;
-    background-color: #fc842d;
-    width: 182px;
-    height: 44px;
-    color: #fff;
-    box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
-    border-radius: 30px;
-}
-
-.formBtn:hover,
-.formBtn:focus {
-    color: #fc842d;
-    background-color: #fff;
-    border: 4px solid #fc842d;
-    transform: scale(1.1);
-}
-.formBtn:disabled {
-    background-color: hsla(25, 97%, 58%, 0.253);
+    color: var(--muted-color);
 }
 
 .errorCont {
     position: absolute;
-    top: 25px;
-    left: 20px;
+    top: 24px;
+    left: 0;
 }
 .errorText {
-    color: red;
-    font-size: 12px;
+    color: var(--error-color);
+    font-size: 8px;
 }
 
 .googleBtn {
@@ -89,11 +66,8 @@
 }
 
 @media screen and (min-width: 768px) {
-    .googleBtn {
-        margin: 40px auto 0 0;
-    }
     .loginForm {
-        margin-top: 160px;
+        margin-top: 60px;
         margin-left: 20px;
         width: 240px;
     }
@@ -106,7 +80,8 @@
 
         width: 100%;
     }
-    .formBtn {
-        margin: 60px auto 0px 0px;
+
+    .errorText {
+        font-size: 10px;
     }
 }
