--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,68 +1,37 @@
-.headWrapper {
-    /* position: fixed;
-    top: 0; */
-    /* top: 0;
-    width: 100%;
-    height: 56px;
-    background-color: var(--bg-color);
-    z-index: 100; */
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border-bottom: solid 2px var(--line-color); */
-    padding: 20px 23px 16px 20px;
+    max-width: 480px;
+    padding: 20px 20px 16px;
+    margin: 0 auto;
 }
 
 .line {
     width: 100vw;
-    margin-left: calc((320px - 100vw) / 2);
-    padding: 0 calc((100vw - 320px) / 2);
     height: 0;
     border: solid 1px var(--line-color);
 }
 
-.logoLink {
-    display: flex;
-    gap: 7px;
-}
-
-.menuBtn {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    fill: var(--main-color);
-}
-.menuBtn:hover,
-:focus {
-    fill: var(--accent-color);
-}
-
-.logoAndNavBarWrapp {
-    display: flex;
-    align-items: center;
-}
-.userMenuAndBurgerWrapp {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
 @media screen and (min-width: 768px) {
-    .headWrapper {
-        padding: 20px 35px 16px 32px;
+    .container {
+        max-width: 768px;
+        padding: 20px 32px 16px;
     }
 }
 
 @media screen and (min-width: 1280px) {
-    .headWrapper {
+    .container {
+        position: relative;
+        max-width: 1280px;
+        justify-content: flex-start;
+        align-items: flex-end;
+        gap: 110px;
         padding: 80px 16px 0px 16px;
         border-bottom: none;
-        align-items: flex-end;
     }
-    .logoAndNavBarWrapp {
-        align-items: flex-end;
 
-        gap: 20px;
-        padding-bottom: 8px;
+    .line {
+        display: none;
     }
 }
