--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,138 +1,49 @@
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+    pointer-events: none;
+}
+
 .modal {
     position: absolute;
-    z-index: 100;
     left: 0;
-    top: 56px;
-    background-color: var(--bg-color);
+    top: 81px;
     width: 100%;
-    height: 100vh;
-
-    margin-top: 45px;
-}
-
-.modalBottom {
-    composes: modal;
-    top: 90px;
-}
-
-.goBack {
-    cursor: pointer;
 }
 
 .icon {
-    position: absolute;
-    top: 23px;
-    right: 23px;
-    cursor: pointer;
-    stroke: var(--main-color);
-    z-index: 1300;
+    display: none;
 }
 
-.goBack {
-    stroke: var(--main-color);
-}
-
-.icon:hover,
-.goBack:hover {
-    stroke: var(--accent-color);
-}
-
-.btnCloseModal {
-    cursor: pointer;
-}
-
-.muted {
-    background-color: var(--bg-secondary-color);
-}
-
-.transparent {
-    position: absolute;
-    top: -40px;
-    left: calc((100vw - 240px) / 2);
-}
-
-/* @media screen and (max-width: 767px) {
-    .modal {
-        position: absolute;
-        background-color: #fff;
-        top: 50%;
-        top: 360px;
-        left: 50%;
-
-        transform: translate(-50%, -50%);
-        width: 100%;
-    }
-    .wrapper {
-        width: 280px;
-        margin: 0 auto;
-    }
-
-    .iconArrowBack {
-        display: block;
-        background-color: #eff1f3;
-        padding: 8px 0 8px 25px;
-        margin-bottom: 40px;
-    }
-} */
-
-/* @media screen and (min-width: 768px) {
-    .modal {
-        width: 672px;
-        height: 572px;
-        margin-top: 0;
-        border-radius: 25px;
-        padding: 40px 20px;
-    }
+@media screen and (min-width: 768px) {
     .overlay {
-        z-index: 1000;
-        position: relative;
-        position: fixed;
-        top: 0;
-        left: 0;
-        opacity: 1;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: var(--bg-overlay-color);
     }
-    body .modal {
-        transform: translate(-50%, -50%);
-    }
-} */
 
-@media screen and (min-width: 1280px) {
     .modal {
+        left: 50%;
+        top: 50%;
         width: 672px;
         height: 573px;
-        margin-top: 0;
-        border-radius: 25px;
-        /* background-image: url('../../images/GreenLaptop.png');
-        background-position: bottom right;
-        background-repeat: no-repeat; */
-        padding: 40px 20px;
-    }
-
-    .wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(33, 33, 33, 0.12);
-        z-index: 1200;
-    }
-
-    /* body .modal {
         transform: translate(-50%, -50%);
-    } */
+    }
+
+    .icon {
+        position: absolute;
+        top: 23px;
+        right: 23px;
+        display: block;
+        cursor: pointer;
+        pointer-events: auto;
+        stroke: var(--accent2-color);
+        z-index: 1300;
+    }
+
+    .icon:hover {
+        stroke: var(--accent-color);
+    }
 }
