--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,15 +1,13 @@
 .navigation {
     display: flex;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1;
-    letter-spacing: 0.04em;
+    font-family: 'Gotham Pro', sans-serif;
+    font-weight: 900;
     text-transform: uppercase;
 }
 
 .link {
     text-decoration: none;
-    color: #9b9faa;
+    color: var(--muted-color);
 }
 
 .link:first-child,
@@ -18,64 +16,60 @@
 }
 
 .linkActive {
-    color: #212121;
+    color: var(--main-color);
 }
 
-.mobileNavigation {
-    position: absolute;
-    z-index: 10;
-    width: 100%;
+.active {
+    font-weight: 700;
+    font-size: 18px;
+    color: var(--bg-color);
+    text-transform: uppercase;
+}
+
+.passive {
+    composes: active;
+    color: var(--muted-color);
+}
+
+.menu {
+    cursor: pointer;
+    stroke: var(--main-color);
+}
+
+.menu:hover {
+    stroke: var(--accent-color);
+}
+
+.modalContainer {
     height: 100vh;
-    top: 82px;
-    left: 0;
-    right: 0;
-    padding: 60px 15px;
-    background-color: #264061;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding-top: 60px;
+    background-color: var(--accent2-color);
+    pointer-events: auto;
 }
 
-.mobileNavigationItem:not(:last-child) {
-    margin-bottom: 25px;
-}
+@media (min-width: 768px) {
+    .modalContainer {
+        width: 100vw;
+        padding-top: 100px;
+        margin-left: calc((672px - 100vw) / 2);
+        margin-top: -9px;
+    }
 
-.mobileNavigationLink {
-    text-decoration: none;
-    font-family: 'Verdana', sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.21;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #9b9faa;
-}
-
-.mobileNavigationLinkActive {
-    text-decoration: none;
-    font-family: 'Verdana', sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.21;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #fff;
-}
-
-.toggleHidden {
-    display: none;
+    .active {
+        font-size: 24px;
+    }
 }
 
 @media (min-width: 1280px) {
     .navigation {
+        position: absolute;
+        top: 120px;
+        left: 192px;
         padding: 7px 0 7px 22px;
-        flex-grow: 0.9;
-        border-left: 2px solid #e0e0e0;
-    }
-
-    .isHidden {
-        display: none;
-    }
-
-    .toggleHidden {
-        display: block;
+        border-left: 2px solid var(--line-color);
     }
 }
