--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,19 +1,17 @@
 .container {
     position: relative;
-    width: 600px;
+    width: 100%;
+    max-width: 480px;
 }
 
 .list {
     position: absolute;
-    left: 0;
-    top: -160px;
+    left: 20px;
+    top: -240px;
     max-height: 280px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    padding: 10px 13px;
     background: #ffffff;
-    /* border: 1px solid #cacaca; */
-    box-shadow: 0 0 3px #aab2c533;
+    box-shadow: 0 0 10px var(--muted-color);
     overflow-y: scroll;
     z-index: 20;
 }
@@ -22,10 +20,15 @@
     display: flex;
     justify-content: space-between;
     margin: 0;
-    padding: 8px 10px;
-    font-size: 12px;
+    padding: 5px 0;
+    font-size: 10px;
     color: gray;
     cursor: pointer;
+}
+
+.warning {
+    composes: item;
+    color: var(--error-color);
 }
 
 .item:hover {
@@ -34,38 +37,42 @@
 }
 
 .title {
-    width: 300px;
-    padding-right: 20px;
+    width: 193px;
+    padding-right: 8px;
 }
 
 .thumb {
     display: flex;
-    gap: 20px;
+    gap: 8px;
 }
 
 @media screen and (min-width: 768px) {
-    /* .container {
-        width: 184px;
+    .container {
+        max-width: 600px;
     }
 
-    .btn {
-        border-radius: 0;
-        border-top: 2px solid var(--bg-link-color);
-        border-left: none;
-        border-color: var(--bg-link-color);
+    .title {
+        width: 300px;
+        padding-right: 40px;
     }
 
     .list {
-        width: 99%;
-    } */
+        width: 470px;
+        top: -35px;
+        left: 0;
+    }
 
-    @media screen and (min-width: 1280px) {
-        /* .container {
-            width: 220px;
-        } */
+    .item {
+        font-size: 12px;
+    }
 
-        .list {
-            top: -40px;
-        }
+    .thumb {
+        gap: 20px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .list {
+        top: -40px;
     }
 }
