--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,13 +1,3 @@
-/* ======= Home Page ======== */
-
-/* =======   ======== */
-
-.container {
-    display: flex;
-    flex-direction: column;
-    padding: 32px 20px;
-}
-
 .button {
     width: 48px;
     height: 48px;
@@ -25,15 +15,15 @@
     animation: spinner 1.5s linear;
 }
 
-/* .side {
-    width: 763px;
-    flex-shrink: 0;
-} */
+.link {
+    position: relative;
+}
 
-.modalContainer {
-    width: 100vw;
-    /* margin-left: calc((280px - 100vw) / 2); */
-    padding: 0 calc((100vw - 280px) / 2);
+.goBack {
+    position: absolute;
+    top: -56px;
+    stroke: var(--main-color);
+    cursor: pointer;
 }
 
 @keyframes spinner {
@@ -46,20 +36,18 @@
 }
 
 @media screen and (min-width: 768px) {
+    .button {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 1280px) {
     .container {
         display: flex;
-        padding-top: 140px;
     }
 
     .side {
         width: 763px;
         flex-shrink: 0;
-    }
-
-    .container {
-        flex-direction: row;
     }
 }
