add confirm window

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -25,6 +25,13 @@
     width: 210px;
 }
 
+.width90 {
+    composes: button;
+    width: 100px;
+    pointer-events: auto;
+    margin-top: 18px;
+}
+
 .width {
     margin: 40px auto;
 }
