--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -28,6 +28,19 @@
     padding: 10px 20px;
     border-left: 2px solid var(--line-color);
 }
+
+.modal {
+    padding: 55px 20px 20px;
+    text-align: center;
+    border-radius: 10px;
+    background-color: var(--bg-color);
+    box-shadow: 0 0 5px var(--muted-color);
+}
+
+.thumb {
+    display: flex;
+}
+
 @media screen and (min-width: 768px) {
     .container {
         position: absolute;
