--- a/src/components/ProductForm/ProductForm.module.css
+++ b/src/components/ProductForm/ProductForm.module.css
@@ -39,12 +39,12 @@
 @media screen and (min-width: 768px) {
     .form {
         flex-direction: row;
-        padding: 40px 0;
+        padding: 0;
         margin-bottom: 0px;
     }
 
     .input {
-        padding-bottom: 20px;
+        padding-bottom: 10px;
     }
 
     .name {
